Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
-
Microsoft Visual Studio 2015
Description
TServerSocket::listen is using a struct sockaddr instead of a struct sockaddr_storage when calling getsockname. It then fails to get the bound port number when the configured port is 0. See the following stackoverflow post:
http://stackoverflow.com/questions/14624427/wsaefault-error-when-use-getsockname-function